--- a/deep_learning.ipynb
+++ b/deep_learning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x271593b0d60>"
+       "<matplotlib.image.AxesImage at 0x20f4a6082b0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,48 +107,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = torch.nn.Sequential(\n",
     "    torch.nn.Flatten(),\n",
     "    torch.nn.Linear(784, 256),\n",
+    "    torch.nn.BatchNorm1d(256),\n",
     "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(256, 10)\n",
+    "    torch.nn.BatchNorm1d(256),\n",
+    "    torch.nn.Linear(256, 10),\n",
+    "    torch.nn.LogSoftmax(dim=1)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "loss = torch.nn.CrossEntropyLoss()\n",
-    "trainer = torch.optim.SGD(model.parameters(), lr=0.5)\n",
+    "trainer = torch.optim.Adam(model.parameters(), eps=1e-08, lr=0.001)\n",
     "num_epochs = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep: 0, train_loss: 0.7360055906975523, train_acc: 0.7281333333333333, test_loss: 0.5119914211332798, test_acc: 0.806\n",
-      "ep: 1, train_loss: 0.46991741543120524, train_acc: 0.8253833333333334, test_loss: 0.4584991581737995, test_acc: 0.8284\n",
-      "ep: 2, train_loss: 0.41044517780872103, train_acc: 0.8463, test_loss: 0.4478110257536173, test_acc: 0.8357\n",
-      "ep: 3, train_loss: 0.3819778801278865, train_acc: 0.8577666666666667, test_loss: 0.4701241046190262, test_acc: 0.8282\n",
-      "ep: 4, train_loss: 0.3587282989887481, train_acc: 0.86595, test_loss: 0.48785902708768847, test_acc: 0.824\n",
-      "ep: 5, train_loss: 0.34084521963241254, train_acc: 0.8727, test_loss: 0.41451990231871605, test_acc: 0.8486\n",
-      "ep: 6, train_loss: 0.3255005471883936, train_acc: 0.87975, test_loss: 0.377801326289773, test_acc: 0.865\n",
-      "ep: 7, train_loss: 0.3133058674792026, train_acc: 0.88365, test_loss: 0.38610979430377484, test_acc: 0.86\n",
-      "ep: 8, train_loss: 0.3038926399768667, train_acc: 0.8863333333333333, test_loss: 0.3687146741896868, test_acc: 0.8688\n",
-      "ep: 9, train_loss: 0.2941601594711872, train_acc: 0.8900166666666667, test_loss: 0.36046916656196115, test_acc: 0.8707\n"
+      "ep: 0, train_loss: 0.45215090500547533, train_acc: 0.84035, test_loss: 0.3951908528804779, test_acc: 0.859\n",
+      "ep: 1, train_loss: 0.33430827818018327, train_acc: 0.8803666666666666, test_loss: 0.36263287216424944, test_acc: 0.8694\n",
+      "ep: 2, train_loss: 0.2944290065384926, train_acc: 0.8940666666666667, test_loss: 0.3477096140384674, test_acc: 0.8747\n",
+      "ep: 3, train_loss: 0.2668396647940291, train_acc: 0.9042333333333333, test_loss: 0.3388208087533712, test_acc: 0.8799\n",
+      "ep: 4, train_loss: 0.2436475651695373, train_acc: 0.9124333333333333, test_loss: 0.33514143265783786, test_acc: 0.8803\n",
+      "ep: 5, train_loss: 0.22471817421152238, train_acc: 0.9192, test_loss: 0.3362759856507182, test_acc: 0.8815\n"
      ]
     }
    ],
@@ -158,6 +157,7 @@
     "    train_loss, train_acc = 0., 0.\n",
     "    \n",
     "    for X, y in train:\n",
+    "        \n",
     "        trainer.zero_grad()\n",
     "        y_pred = model(X)\n",
     "        l = loss(y_pred, y)\n",
@@ -183,41 +183,6 @@
     "        test_loss / test_iters, test_acc / test_passed)\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
